load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "common",
    exports = ["//common/src/main/java/dev/cel/common/navigation:common"],
)

java_library(
    name = "navigation",
    exports = ["//common/src/main/java/dev/cel/common/navigation"],
)

java_library(
    name = "mutable_navigation",
    exports = ["//common/src/main/java/dev/cel/common/navigation:mutable_navigation"],
)
