load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],  # TODO: Expose to public when ready
)

java_library(
    name = "cel_value",
    visibility = ["//visibility:public"],
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value"],
)

java_library(
    name = "cel_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value_provider"],
)

java_library(
    name = "values",
    exports = ["//common/src/main/java/dev/cel/common/values"],
)

java_library(
    name = "proto_message_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value_provider"],
)

java_library(
    name = "cel_byte_string",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_byte_string"],
)

java_library(
    name = "proto_message_value",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value"],
)

java_library(
    name = "proto_message_lite_value",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value"],
)

java_library(
    name = "cel_lite_proto_message_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value_provider"],
)
