load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],  # TODO: Expose to public when ready
)

java_library(
    name = "cel_value",
    visibility = ["//:internal"],
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value"],
)

java_library(
    name = "cel_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value_provider"],
)

java_library(
    name = "values",
    exports = ["//common/src/main/java/dev/cel/common/values"],
)

java_library(
    name = "base_proto_cel_value_converter",
    exports = ["//common/src/main/java/dev/cel/common/values:base_proto_cel_value_converter"],
)

java_library(
    name = "proto_message_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value_provider"],
)

java_library(
    name = "cel_byte_string",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_byte_string"],
)

java_library(
    name = "proto_message_value",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value"],
)
