load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_rules.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],  # TODO: Expose to public when ready
)

java_library(
    name = "cel_value",
    visibility = ["//:internal"],
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value"],
)

cel_android_library(
    name = "cel_value_android",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value_android"],
)

java_library(
    name = "cel_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value_provider"],
)

cel_android_library(
    name = "cel_value_provider_android",
    exports = ["//common/src/main/java/dev/cel/common/values:cel_value_provider_android"],
)

java_library(
    name = "combined_cel_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:combined_cel_value_provider"],
)

cel_android_library(
    name = "combined_cel_value_provider_android",
    exports = ["//common/src/main/java/dev/cel/common/values:combined_cel_value_provider_android"],
)

java_library(
    name = "values",
    exports = ["//common/src/main/java/dev/cel/common/values"],
)

cel_android_library(
    name = "values_android",
    exports = ["//common/src/main/java/dev/cel/common/values:values_android"],
)

java_library(
    name = "base_proto_cel_value_converter",
    exports = ["//common/src/main/java/dev/cel/common/values:base_proto_cel_value_converter"],
)

cel_android_library(
    name = "base_proto_cel_value_converter_android",
    exports = ["//common/src/main/java/dev/cel/common/values:base_proto_cel_value_converter_android"],
)

java_library(
    name = "proto_message_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value_provider"],
)

java_library(
    name = "cel_byte_string",
    # used_by_android
    exports = ["//common/src/main/java/dev/cel/common/values:cel_byte_string"],
)

java_library(
    name = "proto_message_value",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_value"],
)

java_library(
    name = "proto_message_lite_value",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value"],
)

cel_android_library(
    name = "proto_message_lite_value_android",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value_android"],
)

java_library(
    name = "proto_message_lite_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value_provider"],
)

cel_android_library(
    name = "proto_message_lite_value_provider_android",
    exports = ["//common/src/main/java/dev/cel/common/values:proto_message_lite_value_provider_android"],
)

java_library(
    name = "base_proto_message_value_provider",
    exports = ["//common/src/main/java/dev/cel/common/values:base_proto_message_value_provider"],
)

cel_android_library(
    name = "base_proto_message_value_provider_android",
    exports = ["//common/src/main/java/dev/cel/common/values:base_proto_message_value_provider_android"],
)
