package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "constant_folding",
    exports = ["//optimizer/src/main/java/dev/cel/optimizer/optimizers:constant_folding"],
)

java_library(
    name = "common_subexpression_elimination",
    exports = ["//optimizer/src/main/java/dev/cel/optimizer/optimizers:common_subexpression_elimination"],
)
