load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],
)

java_library(
    name = "policy_test_suite_helper",
    testonly = True,
    exports = ["//policy/src/main/java/dev/cel/policy/testing:policy_test_suite_helper"],
)
