load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_rules.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],
)

java_library(
    name = "program_planner",
    exports = ["//runtime/src/main/java/dev/cel/runtime/planner:program_planner"],
)

cel_android_library(
    name = "program_planner_android",
    exports = ["//runtime/src/main/java/dev/cel/runtime/planner:program_planner_android"],
)
