load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],
)

java_library(
    name = "program_planner",
    exports = ["//runtime/src/main/java/dev/cel/runtime/planner:program_planner"],
)

java_library(
    name = "planned_program",
    visibility = ["//:internal"],
    exports = ["//runtime/src/main/java/dev/cel/runtime/planner:planned_program"],
)
